# lifeline

./: .gitignore  Cargo.toml  README.md  bacon.toml  index.html  justfile  package.json  pnpm-lock.yaml  tailwind.config.js  zellij.kde
.cargo/: config.toml
.helix/: languages.toml
src/: data.rs  lib.rs  main.rs  types.rs  viewstate.rs
src/pages/: home.rs
