[package]
name = "lifeline"
version = "0.1.0"
edition = "2021"
authors = ["Oliver Nordh <oliver.nordh@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
leptos_router = { version = "0.6", features = ["csr", "nightly"] }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
leptos-use = "0.10.5"
chrono = { version = "0.4.37", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "js"] }
leptos_hotkeys = { version = "0.2.0-alpha.1", features = ["debug"]}
enum_dispatch = "0.3.13"
indicium = "0.6.1"
rand = "0.8.5"
getrandom = { version = "0.2.14", features = ["js"] }
indexmap = "2.2.6"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window", "Element", "HtmlElement", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition"] }


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
